@@ -3,6 +3,8 @@
 	* webrocket-server/main.go: locking and storage fixes
 	* webrocket/context.go: locking and storage fixes
 	* webrocket/channel.go: optimized broadcasting
+	* webrocket/vhost.go: added Kill function and direct access to lobby
+	* webrocket/backend_endpoint.go: optimized access to vhost's lobby
 
 2012-01-20  Krzysztof Kowalik  <chris@nu7hat.ch>
 
